Implemented map into my portfolio, with a night-mode option

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -8,6 +8,14 @@
   margin-top: 20px;
 }
 
+#map {
+  border: thin solid black;  
+  margin-left: auto;
+  margin-right: auto;
+  height: 700px;
+  width: 800px;
+}
+
 .image-thumbnails {
   display: flex;
   flex-wrap: wrap;
